Remove dependency and check location distances.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         }
     ],
     "require": {
-        "dominikveils/coordinates": "^0.1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "JessicaDigital\\TflCycles\\": "src"
+        }
     }
 }
